  'disableaccount' privilege to permanently deactivate user accounts.
* (bug 8130) Query pages should limit to content namespaces, not just main namespace 
* Search suggestions (other than in the Vector skin) will now use the HTML5
  datalist feature where supported, currently only Firefox 4.
* Special:Contribs now redirects to Special:Contributions

=== Bug fixes in 1.18 ===
* (bug 23119) WikiError class and subclasses are now marked as deprecated
* (bug 10871) Javascript and CSS pages in MediaWiki namespace are no longer
  treated as wikitext on preview.
* (bug 22753) Output from update.php is more clear when things changed, entries
  indicating nothing changed are now all prefixed by "..."
* Page existence is now not revealed (in the colour of the tabs) to users who
  cannot read the page in question.
* (bug 19006) {{REVISIONUSER}} no longer acts like {{CURRENTUSER}} in some cases
* (bug 16019) $wgArticlePath = "/$1" no longer breaks API edit/watch actions
* (bug 18372) File types blacklisted by $wgFileBlacklist will no longer be shown as
  "Permitted file types" on the upload form
* (bug 26379) importImages.php gives more descriptive error message on failure.
* (bug 26410) + signs are no longer treated as spaces in internal links if 
  link has a % sign in it.
* (bug 26412) Search results headers no longer show a bogus edit link.
* (bug 26540) Fixed wrong call to applyPatch in MysqlUpdater
* (bug 26574) Added 'upload' to $wgRestrictionTypes, allowing upload protected 
  pages to be queried via the API and Special:ProtectedPages, and allowing 
  disabling upload protection by removing it from $wgRestrictionTypes.
* If an edit summary exceeds 250 bytes and is truncated, add an ellipse

=== API changes in 1.18 ===
* (bug 26339) Throw warning when truncating an overlarge API result
* (bug 14869) Add API module for accessing QueryPage-based special pages
* (bug 14020) API for Special:Unwatchedpages
* (bug 24287) Wrap API Help output at 100 characters